<resources>
    <string name="app_name">ExamenAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="examen_android">Examen Android</string>
    <string name="usuario">"  Email de Usuario"</string>
    <string name="contrase_a">"  Contraseña(minimo 6 caracteres)"</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="agregar_colaborador">Agregar Colaborador</string>
    <string name="mis_colaboradoes">Mis Colaboradoes</string>
    <string name="consumo_servicio">Consumo Servicio</string>
</resources>